Nav Bar Fixed Overlap

--- a/index.css
+++ b/index.css
@@ -13,15 +13,15 @@ header{
     font-family:'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 28px;
+    font-size: 20px;
     text-decoration: none;
     display: flex;
     padding: 10px;
     color: #FFECE8;
     background-color: #FF7050;
-    justify-content:start;
     position: fixed;
     width: 100%;
+    height: 80px;
     top: 0;
     left: 0;
 }
@@ -32,6 +32,7 @@ header{
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
+    justify-content:start;
 }
 
 .navlinks li {
@@ -42,7 +43,7 @@ header{
 }
 
 .signin {
-    margin-left: 70%;
+    justify-content:end;
 }
 main {
     margin-top: 86px;
